--- a/src/index.html
+++ b/src/index.html
@@ -5,33 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin - Вход</title>
+    <link rel="stylesheet" href="styles/authorization/index.css">
+    <script defer src="scripts/authorization.js"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="header__wrap container">
-            <img src="img/logo.svg" alt="Логотип" class="header__logo">
-        </div>
-    </header>
-    <main class="main">
-        <h1 class="visually-hidden">Coin</h1>
-        <div class="main__wrap container">
-            <form class="main__form">
-                <h2 class="main__form-title title">
-                    Вход в аккаунт
-                </h2>
-                <label class="main__form-label">
-                    Логин
-                    <input type="text" class="main__form-input" placeholder="Логин">
-                </label>
-                <label class="main__form-label">
-                    Пароль
-                    <input type="text" class="main__form-input" placeholder="Пароль">
-                </label>
-                <a href="components/cabinet/index.html" class="main__form-button button">
-                    Войти
-                </a>
-            </form>
-        </div>
-    </main>
+  <header class="header">
+    <div class="header__wrap container">
+      <img src="/src/img/logo.svg" alt="Логотип" class="header__logo">
+    </div>
+  </header>
+  <main class="main">
+    <h1 class="visually-hidden">Coin</h1>
+    <section class="main__wrap container">
+        <form class="main__form">
+            <h2 class="main__form-title title">
+                Вход в аккаунт
+            </h2>
+            <label class="main__form-label">
+                Логин
+                <input type="text" class="main__form-input" placeholder="Логин">
+            </label>
+            <label class="main__form-label">
+                Пароль
+                <input type="text" class="main__form-input" placeholder="Пароль">
+            </label>
+            <a href="#" class="main__form-link">
+                Войти
+            </a>
+        </form>
+      </section>
+  </main>
 </body>
 </html>
