added new pages

--- a/src/account.html
+++ b/src/account.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coin - Кабинет</title>
+    <title>Coin - Просмотр счёта</title>
     <link rel="stylesheet" href="styles/account/index.css">
     <script defer type="module" src="scripts/account.js"></script>
 </head>
 <body>
   <header class="header">
     <div class="header__wrap container">
-        <img src="/src/img/logo.svg" alt="Логотип" class="header__logo">
+        <img id="logo" src="/src/img/logo.svg" alt="Логотип" class="header__logo">
         <ul class="header__wrap-list">
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button">
+            <button id="atms" class="header__wrap-item-button">
               Банкоматы
             </button>
           </li>
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button">
+            <button id="accounts" class="header__wrap-item-button">
               Счета
             </button>
           </li>
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button">
+            <button id="currency" class="header__wrap-item-button">
               Валюта
             </button>
           </li>
