--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -11,20 +11,20 @@
 <body>
   <header class="header">
     <div class="header__wrap container">
-        <img src="/src/img/logo.svg" alt="Логотип" class="header__logo">
+        <img id="logo" src="/src/img/logo.svg" alt="Логотип" class="header__logo">
         <ul class="header__wrap-list">
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button">
+            <button id="atms" class="header__wrap-item-button">
               Банкоматы
             </button>
           </li>
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button disabled-button">
+            <button disabled id="accounts" class="header__wrap-item-button">
               Счета
             </button>
           </li>
           <li class="header__wrap-item">
-            <button class="header__wrap-item-button">
+            <button id="currency" class="header__wrap-item-button">
               Валюта
             </button>
           </li>
