--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </header>
   <main class="main">
     <h1 class="visually-hidden">Coin</h1>
-    <section class="main__wrap container">
+    <div class="main__wrap container">
         <form class="main__form">
             <h2 class="main__form-title title">
                 Вход в аккаунт
@@ -33,7 +33,7 @@
                 Войти
             </a>
         </form>
-      </section>
+      </div>
   </main>
 </body>
 </html>
