add new pages + fixes

--- a/src/currency.html
+++ b/src/currency.html
@@ -68,10 +68,10 @@
               </label>
               <label class="main__exchange-label">
                 Сумма
-                <input id="amount" type="text" class="main__exchange-input" placeholder="Сумма">
+                <input id="amount" type="number" class="main__exchange-input" placeholder="Сумма">
               </label>
             </div>
-            <button class="main__exchange-button">
+            <button disabled class="main__exchange-button">
               Обменять
             </button>
           </form>
