--- a/src/history.html
+++ b/src/history.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coin - Просмотр счёта</title>
-    <link rel="stylesheet" href="styles/account/index.css">
-    <script defer type="module" src="scripts/account.js"></script>
+    <title>Coin - История баланса</title>
+    <link rel="stylesheet" href="styles/history/index.css">
+    <script defer type="module" src="scripts/history.js"></script>
 </head>
 <body>
   <header class="header">
@@ -40,7 +40,7 @@
     <section class="main__panel">
       <div class="main__panel-left">
         <h2 class="main__panel-title title">
-          Просмотр счёта
+          История баланса
         </h2>
         <p id="account-number" class="main__panel-number"></p>
       </div>
