--- a/src/account.html
+++ b/src/account.html
@@ -75,7 +75,7 @@
         <h3 class="main__info-form-title title">
           Динамика баланса
         </h3>
-        <canvas id="bar-chart" width="510" height="165"></canvas>
+        <canvas class="chart" id="bar-chart" width="510" height="165"></canvas>
       </div>
     </section>
     <section class="main__history">
