--- a/src/history.html
+++ b/src/history.html
@@ -55,27 +55,17 @@
       </div>
     </section>
     <section class="main__info">
-      <form class="main__info-form">
-        <h3 class="main__info-form-title title">
-          Новый перевод
-        </h3>
-        <label class="main__info-form-label">
-          Номер счёта получателя
-          <input id="account-to" type="number" class="main__info-form-input" placeholder="Номер счёта">
-        </label>
-        <label class="main__info-form-label">
-          Сумма перевода
-          <input id="amount" type="number" class="main__info-form-input" placeholder="Сумма">
-        </label>
-        <button disabled class="main__info-form-button">
-          Отправить
-        </button>
-      </form>
       <div class="main__info-chart">
-        <h3 class="main__info-form-title title">
+        <h3 class="main__info-chart-title title">
           Динамика баланса
         </h3>
-        <canvas id="bar-chart" width="510" height="165"></canvas>
+        <canvas id="bar-chart-dynamic" width="100%" height="288"></canvas>
+      </div>
+      <div class="main__info-chart">
+        <h3 class="main__info-chart-title title">
+          Соотношение входящих исходящих транзакций
+        </h3>
+        <canvas id="bar-chart-transactions" width="100%" height="288"></canvas>
       </div>
     </section>
     <section class="main__history">
