upd history page

--- a/src/account.html
+++ b/src/account.html
@@ -72,10 +72,12 @@
         </button>
       </form>
       <div class="main__info-chart">
-        <h3 class="main__info-form-title title">
+        <h3 class="main__info-chart-title title">
           Динамика баланса
         </h3>
-        <canvas class="chart" id="bar-chart" width="510" height="165"></canvas>
+        <ul class="main__info-chart-year-list">
+        </ul>
+        <canvas class="chart" id="chart" width="510" height="165"></canvas>
       </div>
     </section>
     <section class="main__history">
