--- a/src/assets/public/account.html
+++ b/src/assets/public/account.html
@@ -42,65 +42,20 @@
         <h2 class="main__panel-title title">
           Просмотр счёта
         </h2>
-        <p id="account-number" class="main__panel-number"></p>
+        <p id="account-number" class="main__panel-number skeleton skeleton-text"></p>
       </div>
       <div class="main__panel-right">
         <button class="main__panel-button button">
           Вернуться назад
         </button>
-        <p class="main__panel-balance">
-          Баланс
-          <span id="balance"></span>
-        </p>
+        <p id="balance" class="main__panel-balance skeleton skeleton-text"></p>
       </div>
     </section>
     <section class="main__info">
-      <form class="main__info-form">
-        <h3 class="main__info-form-title title">
-          Новый перевод
-        </h3>
-        <label class="main__info-form-label">
-          Номер счёта получателя
-          <input id="account-to" type="number" class="main__info-form-input" placeholder="Номер счёта">
-        </label>
-        <label class="main__info-form-label">
-          Сумма перевода
-          <input id="amount" type="number" class="main__info-form-input" placeholder="Сумма">
-        </label>
-        <button disabled class="main__info-form-button">
-          Отправить
-        </button>
-      </form>
-      <div class="main__info-chart">
-        <h3 class="main__info-chart-title title">
-          Динамика баланса
-        </h3>
-        <ul class="main__info-chart-year-list">
-        </ul>
-        <canvas class="chart" id="chart" width="510" height="165"></canvas>
-      </div>
+      <form class="main__info-form skeleton"></form>
+      <div class="main__info-chart skeleton"></div>
     </section>
-    <section class="main__history">
-      <h3 class="main__history-title title">
-        История переводов
-      </h3>
-      <ul class="main__history-list">
-        <li class="main__history-item list-titles">
-          <p class="main__history-item-title">
-            Счёт отправителя
-          </p>
-          <p class="main__history-item-title">
-            Счёт получателя
-          </p>
-          <p class="main__history-item-title">
-            Сумма
-          </p>
-          <p class="main__history-item-title">
-            Дата
-          </p>
-        </li>
-      </ul>
-    </section>
+    <section class="main__history skeleton"></section>
   </main>
 </body>
 </html>
