--- a/src/assets/public/atms.html
+++ b/src/assets/public/atms.html
@@ -43,7 +43,7 @@
       <h2 class="main__panel-title title">
         Карта банкоматов
       </h2>
-      <div id="map" style="width: 100%; height: 720px"></div>
+      <div class="skeleton" id="map" style="width: 100%; height: 720px"></div>
     </section>
   </main>
 </body>
