--- a/src/assets/public/atms.html
+++ b/src/assets/public/atms.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin - Банкоматы</title>
-    <link rel="stylesheet" href="./atms/atms.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=6d5af347-234b-4785-ac46-675fce0d5ea1&lang=ru_RU" type="text/javascript">
     </script>
-    <script defer type="module" src="./atms/atms.js"></script>
+    <script type="module" src="./atms/atms.js"></script>
 </head>
 <body>
   <header class="header">
@@ -36,6 +35,11 @@
             </button>
           </li>
         </ul>
+        <button class="hamburger hamburger--spring" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
     </div>
   </header>
   <main class="main">
