--- a/src/assets/public/cabinet.html
+++ b/src/assets/public/cabinet.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin - Кабинет</title>
     <script type="module" src="./cabinet/cabinet.js"></script>
-    <link rel="stylesheet" href="./cabinet/cabinet.css">
 </head>
 <body>
   <header class="header">
     <div class="header__wrap container">
         <img id="logo" src="../img/logo.svg" alt="Логотип" class="header__logo">
+        <button class="hamburger hamburger--spring" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
         <ul class="header__wrap-list">
           <li class="header__wrap-item">
             <button id="atms" class="header__wrap-item-button">
