--- a/src/assets/public/currency.html
+++ b/src/assets/public/currency.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin - Валюта</title>
-    <link rel="stylesheet" href="../../dist/styles/choices.min.css">
     <script defer type="module" src="./currency/currency.js"></script>
-    <link rel="stylesheet" href="./currency/currency.css">
 </head>
 <body>
   <header class="header">
@@ -35,6 +33,11 @@
             </button>
           </li>
         </ul>
+        <button class="hamburger hamburger--spring" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
     </div>
   </header>
   <main class="main">
