--- a/src/assets/public/history.html
+++ b/src/assets/public/history.html
@@ -34,6 +34,11 @@
             </button>
           </li>
         </ul>
+        <button class="hamburger hamburger--spring" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
     </div>
   </header>
   <main class="main container">
