--- a/src/assets/public/history.html
+++ b/src/assets/public/history.html
@@ -43,7 +43,7 @@
     <section class="main__panel">
       <div class="main__panel-left">
         <h2 class="main__panel-title title">
-          Просмотр счёта
+          История баланса
         </h2>
         <p id="account-number" class="main__panel-number skeleton skeleton-text"></p>
       </div>
