added e2e tests + readme

--- a/src/assets/public/index.html
+++ b/src/assets/public/index.html
@@ -27,9 +27,9 @@
           Пароль
           <input id="password" type="password" class="main__form-input" placeholder="Пароль">
         </label>
-        <a href="#" class="main__form-link disabled">
+        <button class="main__form-button" disabled>
           Войти
-        </a>
+        </button>
       </form>
     </div>
   </main>
